test/functions/ferguson/ref-pair/ref-return-intent-ambiguous-value.good
ref-return-intent-ambiguous-value.chpl:16: error: ambiguous call 'access()'
ref-return-intent-ambiguous-value.chpl:4: note: candidates are: access()
ref-return-intent-ambiguous-value.chpl:8: note:                 access(x = 4)
ref-return-intent-ambiguous-value.chpl:12: note:                 access(y = 3)
